# MathFlow

./: .gitignore  CLAUDE.md  PLAN.md  README.md
editor/: pyproject.toml  requirements.txt
editor/mathflow_editor/: units.py
editor/mathflow_editor/analysis/: pipeline.py  review.py  segment.py  vlm_client.py
editor/mathflow_editor/io/: export.py  metadata.py
editor/mathflow_editor/ui/: flow_layout.py  main.py  review_window.py
editor/prototypes/: analyze_chapter.py  batch_classify.py  build_answers.py  diff_edits.py  eval_page21.py
server/: main.py  mathflow-server.service  sync_store.py
server/client/: app.js  index.html  style.css
shared/schema/: README.md  blocks.schema.json  book.schema.json  pages.schema.json  validate.py
