[project]
name = "mathflow-editor"
version = "0.1.0"
description = "MathFlow PDF 편집기 — 수학책 PDF 전처리 및 블록 분석"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF==1.28.0",
    "Pillow==12.3.0",
    "jsonschema==4.26.0",
    "opencv-python-headless==5.0.0.93",
    "numpy==2.5.1",
    "requests==2.34.2",
    "python-dotenv==1.2.2",
    "PySide6==6.11.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mathflow_editor*"]
